--- a/package.json
+++ b/package.json
@@ -4,27 +4,35 @@
   "description": "Portfolio page",
   "main": "index.js",
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "0.0.5-beta.2",
+    "font-mfizz": "^2.4.1",
+    "less": "^2.7.3",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "url-loader": "^0.6.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.7.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.27.3",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.10.1",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.1",
+    "sass-loader": "^6.0.3",
+    "webpack": "^2.7.0",
     "webpack-dev-server": "^2.9.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":
+    "build": "webpack-dev-server",
+    "build:prod": "webpack -p"
   },
   "repository": {
     "type": "git",
